# PowerBlock

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  install.sh  install_libreelec.sh  uninstall.sh
doc/: CMakeLists.txt  Doxyfile.in
doc/htmlDoc/html/: index.html
doc/htmlDoc/latex/: refman.tex
scripts/: Makefile  gpio_pull-overlay.dts  installService.sh  powerblock  powerblock.in  powerblockservice  powerblockservice.sh  travis-ci.sh  uninstall.cmake
scripts/libreelec/: autostart.sh  powerblock.sh
src/: CMakeLists.txt
src/lib/bcm2835-1.48/: Makefile.in  aclocal.m4  configure  configure.ac
src/lib/bcm2835-1.48/doc/: Makefile.in
src/lib/bcm2835-1.48/examples/blink/: blink.c
src/lib/bcm2835-1.48/examples/i2c/: i2c.c
src/lib/bcm2835-1.48/examples/pwm/: pwm.c
src/lib/bcm2835-1.48/examples/spi/: spi.c
src/lib/bcm2835-1.48/examples/spin/: spin.c
src/lib/bcm2835-1.48/src/: CMakeLists.txt  Makefile.in  test.c
src/powerblock/: CMakeLists.txt  GPIO.cpp  GPIO.h  Makefile  PowerBlock.cpp  PowerBlock.h  PowerBlockConfiguration.cpp  PowerBlockConfiguration.h  PowerSwitch.cpp  PowerSwitch.h  main.cpp  version.h
supplementary/: powerblockconfig.cfg
test/: travis-ci.sh
